--- a/style.css
+++ b/style.css
@@ -11,15 +11,20 @@ body {
 }
 
 #menu #title {
-    display: inline-block;
     font-weight: bold;
-    padding: 1rem;
+    padding-top: 0.5rem;
+}
+
+#menu #subtitle {
+    font-size: 10px;
+    padding-bottom: 0.25rem;
 }
 
 #app {
     margin: 0 auto;
     display: flex;
     justify-content: center;
+    align-items: flex-start;
 }
 
 #app > * {
